--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ SCPH*.bin
 # CPU trace logs (generated during debugging)
 bios_trace.log
 *.trace.log
+
+# Claude local settings
+.claude/settings.local.json
